app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: my-app
  namespace: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels: 
        app: my-app
    spec:
      containers:
      - name: my-app
        image: pmunyoki/django_app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
  namespace: my-app
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30056
  type: NodePort
